--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/img/Logo.png" />
+    <link rel="icon" href="/img/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> نظام إدارة المشاريع </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
